--- a/package.json
+++ b/package.json
@@ -8,14 +8,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "node-sass": "^7.0.1",
+    "polished": "^4.2.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.15.1",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.51.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-modal": "^3.13.1",
+    "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "sass-loader": "^12.6.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
