--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "polished": "^4.2.2",
@@ -20,6 +21,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.3",
     "@types/react-modal": "^3.13.1",
