--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
+    "i18n-js": "^4.2.2",
     "node-sass": "^7.0.1",
     "polished": "^4.2.2",
     "react": "^18.0.0",
