--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "i18n-js": "^4.2.2",
+    "i18next": "^22.4.6",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "i18next-xhr-backend": "^3.2.2",
     "node-sass": "^7.0.1",
     "polished": "^4.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^12.1.1",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
